Clean up site layout

--- a/notebooks/2023-02-11-linear-regression.ipynb
+++ b/notebooks/2023-02-11-linear-regression.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "id": "64e2e477-788a-44ac-84c6-01d18b970957",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "# Linear Regression - Connect the dots\n",
@@ -17,7 +20,10 @@
    "execution_count": null,
    "id": "742823ca-54a3-421e-a367-da4625cd22d6",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": []
@@ -25,20 +31,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "argv": [
-    "python",
-    "-m",
-    "ipykernel_launcher",
-    "-f",
-    "{connection_file}"
-   ],
    "display_name": "Python 3 (ipykernel)",
-   "env": null,
-   "interrupt_mode": "signal",
    "language": "python",
-   "metadata": {
-    "debugger": true
-   },
    "name": "python3"
   },
   "language_info": {
