--- a/notebooks/2024-02-11-linear-regression.ipynb
+++ b/notebooks/2024-02-11-linear-regression.ipynb
@@ -10,7 +10,7 @@
     }
    },
    "source": [
-    "# Linear Regression - Connect the dots\n",
+    "# Neural Network Layers Part 1 - Linear Layers\n",
     "\n",
     "A fundamental concept in machine learning is 'linear regression'.  The concept is actually pretty intuitive, especially if we work in 2-D:"
    ]
@@ -59,7 +59,10 @@
    "cell_type": "markdown",
    "id": "fa864f6f-3e22-4f7b-837d-1b0e9c703609",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "That relationship looks pretty linear.  It would seem reasonable then for us to draw a line of best fit on the data, and use that to infer the price of a condo based on its square footage:"
@@ -70,7 +73,10 @@
    "execution_count": 226,
    "id": "f3c91406-1f1b-4ccb-bca2-c629886fa5d2",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -113,7 +119,10 @@
    "cell_type": "markdown",
    "id": "e5d4a714-2334-4d1f-9720-4503c8c5eb31",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "This is basically what's done when we fit a 'linear layer' from Pytorch to the same data:"
@@ -124,7 +133,10 @@
    "execution_count": 227,
    "id": "a74b1c3e-9e9e-4b92-9eac-b241d2f9a40a",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -154,7 +166,10 @@
    "execution_count": 228,
    "id": "72836aef-99dd-416d-b4ad-51550f62671d",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -171,7 +186,10 @@
    "execution_count": 229,
    "id": "1d2f9b68-cc46-4e59-b539-bf6be0c704b6",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -188,7 +206,10 @@
    "execution_count": 230,
    "id": "f07ac3ea-b7ce-46fb-8f43-74bb36b76085",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -211,7 +232,10 @@
    "cell_type": "markdown",
    "id": "f04457aa-6345-4188-ba3b-f7c842d886bc",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "That is decently close, but let's iterate for a few more 'epochs' and see if we can improve the loss and get closer to the line of fit we achieved previously:"
@@ -222,7 +246,10 @@
    "execution_count": 231,
    "id": "aeb717d5-c71e-4695-beb9-c0f3372d18bd",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -240,7 +267,10 @@
    "execution_count": 232,
    "id": "70cab329-8f0d-4980-a902-424d9ddd559b",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -278,12 +308,15 @@
    "cell_type": "markdown",
    "id": "03cf642a-30cb-4781-8f69-b9ea659fb3b8",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
-    "So not great.  But hopefull the idea is clear - our 1 feature 'Linear Layer' is in theory equivalent to fitting data to a line through the data.\n",
+    "So not great.  But hopefully the idea is clear - our 1 feature 'Linear Layer' is in theory equivalent to fitting data to a line through the data.\n",
     "\n",
-    "The issue is that using 'SGD' on so few data points is not likely to yield godo results.  For literally linear relationships, we should stick to fitting a line to the data.\n",
+    "The issue is that using 'SGD' on so few data points is not likely to yield good results.  For literally linear relationships, we should stick to fitting a line to the data.\n",
     "\n",
     "Where neural networks really shine is in 'learning' the parameters of relationships that are way more complicated than the one in this example."
    ]
@@ -291,20 +324,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "argv": [
-    "python",
-    "-m",
-    "ipykernel_launcher",
-    "-f",
-    "{connection_file}"
-   ],
    "display_name": "Python 3 (ipykernel)",
-   "env": null,
-   "interrupt_mode": "signal",
    "language": "python",
-   "metadata": {
-    "debugger": true
-   },
    "name": "python3"
   },
   "language_info": {
